--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,4 @@
-use_frameworks!
+#use_frameworks!
 
 target 'JMProgressHUD_Example' do
   pod 'JMProgressHUD', :path => '../'
@@ -6,6 +6,5 @@ target 'JMProgressHUD_Example' do
   target 'JMProgressHUD_Tests' do
     inherit! :search_paths
 
-    
   end
 end
